Tried fixing Footer

--- a/css/main.css
+++ b/css/main.css
@@ -160,6 +160,7 @@ footer {
   background-color: #d05c2e;
   color: #dc8252;
   text-align: center;
+  padding: 10px;
   margin: 0;
   clear: both;
   font-size: 0.75rem;
